--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>∑ John's Focus of Interest Resume ♥ Site</title>
+  <link rel="stylesheet" href="css/style.css">
+
+
 </head>
 
 <body>
@@ -11,136 +14,168 @@
     <tr>
       <td> <img src="images/john.jpg" width="150" alt="Pre Isleton Shot" /></td>
       <td>
-        <h1>John A. Dodge</h1>
+        <h1 id="myname">John A. Dodge</h1>
 
-        <p>I am an <em><strong>Student</strong></em> of Computer Science, Web Design/Web Development, Interactive Media Design, Mathematics and Physics</p>
+        <p id="student">I am an <em>Student</em> of<br>Computer Science, Web Design/Web Development, Interactive Media Design, Mathematics and Physics</p>
         <p>I am hoping to become a front end or full stack Web Design-Web Developer</p>
         <p></p>
         <p><em>"A warrior of honor doesn't abandon his own, while crying wolf wearing fur not wool!"</em></p>
       </td>
     </tr>
   </table>
-  <table cellspacing="10">
+  <table cellspacing="11">
     <tr>
       <td>
-        <h2>Skill Sets and Educational History:</h2>
-        <hr noshade>
+        <h2>A Collective Thought Process: Skill Sets and Educational History:</h2>
+        <hr>
         </hr>
-        <p>The Green hearts denote current skill (give or take), based upon an average of the total quality of works. </p>
       </td>
     </tr>
     <tr>
-      <td>I have received 40 computer science certificates from Programming Hub, the courses were not nearly as involved but certainly added up and in a splendid wide variety of computer science subjects.</td>
+      <td>
+        <p>I have received 40 computer science certificates from Programming Hub, the courses were not nearly as involved but certainly added up and in a splendid wide variety of computer science subjects.<br>
+          I received a certificate of completion from the School of Massage in Shiatsu from San Francisco, CA.
+        </p>
+      </td>
     </tr>
     <tr>
-      <td>html through advanced, css through advanced, javascript through advanced, python though advanced, java through advanced, c through advanced, c++ through advanced, ai, iot, android, cloud computing,
-        cryptography, cybersecurity, ethical hacking, hackingadvanced, computernetworks, building a website, datascience, expressjs, rdbms,react, shellscripting, machine learning, mathlab sql, mongodb, nodejs,oop, perl, php, swift, vbnet, software
-        engineering! </td>
+      <td>
+        <p>The following are subjects of which I have studied from <strong>Programming Hub</strong>...<br>
+          HTML through advanced, css through advanced, javascript through advanced, python though advanced, java through advanced, c through advanced, c++ through advanced, ai, iot, android, cloud computing,
+          cryptography, cybersecurity, ethical hacking, hackingadvanced, computernetworks, building a website, datascience, expressjs, rdbms,react, shellscripting, machine learning, mathlab sql, mongodb, nodejs,oop, perl, php, swift, vbnet, software
+          engineering!</p>
+      </td>
     </tr>
-    <tr>
-      <td>Art and Creativity 💚💚💚💚💚</td>
-    </tr>
-    <tr>
-      <td>Caregiving 💚💚💚💚💚</td>
-    </tr>
-
-    <tr>
-      <td>Digital Photography 💚💚💚💚💚 </td>
-    </tr>
-    <td>Graphic Design 💚💚💚💚 maybe 💚💚💚💚💚 </td>
-    </tr>
-    <tr>
-      <td>Motion Graphics 💚💚 maybe 💚💚💚 </td>
-    <tr>
-      <td>Preaching 💚💚💚💚💚</td>
-    </tr>
-    <tr>
-      <td>Programming 💚💚 maybe 💚💚💚 </td>
-    </tr>
-    <tr>
-      <td>Sports💚💚💚💚💚</td>
-    </tr>
-    <tr>
-      <td>Writing 💚💚💚💚💚</td>
-    </tr>
-    <tr>
-      <td>I received a web design course completion as well as studied interactive media design at Ohlone College in Fremont, CA, in programming, web design and modeling.</td>
-      <td>I have a 4.0 grade average from Ohlone College in Fremont, CA </td>
-    </tr>
-    <tr>
-      <td>Web Design 💚💚💚 maybe 💚💚💚💚</td>
-    </tr>
-    <tr>
-      <td>Web Development 💚💚</td>
-    </tr>
-
   </table>
+  <p id="greenhearts">The <span id="green">Green</span> hearts denote current skill (give or take), based upon an average of the total quality of works. </p>
+  <div class="greenheartinterest">
+    <table cellspacing="11">
+
+      <tr>
+        <td>Art and Creativity 💚💚💚💚💚</td>
+      </tr>
+      <tr>
+        <td>Caregiving 💚💚💚💚💚</td>
+      </tr>
+
+      <tr>
+        <td>Digital Photography 💚💚💚💚💚 </td>
+      </tr>
+      <td>Graphic Design 💚💚💚💚 maybe 💚💚💚💚💚 </td>
+      </tr>
+      <tr>
+        <td>Motion Graphics 💚💚 maybe 💚💚💚 </td>
+      <tr>
+        <td>Preaching 💚💚💚💚💚</td>
+      </tr>
+      <tr>
+        <td>Programming 💚💚 maybe 💚💚💚 </td>
+      </tr>
+      <tr>
+        <td>Sports💚💚💚💚💚</td>
+      </tr>
+      <tr>
+        <td>Writing 💚💚💚💚💚<br></br></td><br>
+      </tr>
+      <tr>
+        <td>I received a web design course completion as well as studied interactive media design at Ohlone College in Fremont, CA, in programming, web design and modeling.</td>
+        <td>I have a 4.0 grade average from Ohlone College in Fremont, CA </td>
+      </tr>
+      <tr>
+        <td>Web Design 💚💚💚 maybe 💚💚💚💚</td>
+      </tr>
+      <tr>
+        <td>Web Development 💚💚</td>
+      </tr>
+    </table>
+  </div>
   <!--
 <p><a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/learn/lecture/12287450#overview" target="_blank">
 The Complete 2020 Web Development Bootcamp:</a></p>-->
-  <hr noshade>
+  <hr>
   </hr>
   <header>
-    <img src="images/thinkingmonkeywhitebeard.jpg" width="100" alt="Pre Isleton Shot" />
+    <img src="images/thinkingmonkey.png" id="monkey" width="100" alt="Pre Isleton Shot" />
   </header>
   <h3>Study Subjects of Interest</h3>
-
-  <ul>
-    <li><a href="https://product66.com/themindfullens/" target="_blank>Digital Photography</a></li>
-<li>Graphic Design</li>
-<li><a href=" https://product66.com/websandbox/geogebra/unitcircletrigfunctions.htmlMathematics" target="_blank">Mathematics</a></li>
-    <li>Motion Graphic Design</li>
-    <li>Software Engineering</li>
-    <li>Video Game Development</li>
-    <li><a href="https://product66.com/themindfullens/?p=988" target="_blank">Web Design and Development</a></li>
-  </ul>
-
+  <div id="binaryinterest">
+    <ul>
+      <li><a href="https://product66.com/themindfullens/" target="_blank">Digital Photography</a></li>
+      <li>Graphic Design</li>
+      <li><a href=" https://product66.com/websandbox/geogebra/unitcircletrigfunctions.html" target="_blank">Mathematics</a></li>
+      <li>Motion Graphic Design</li>
+      <li>Software Engineering</li>
+      <li>Video Game Development</li>
+      <li><a href="https://product66.com" target="_blank">Web Design and Development</a></li>
+    </ul>
+  </div>
   <h3>Hobbies of interactive interest:</h3>
-  <ol>
-    <li><a href"https://product66.com/themindfullens/?p=988" target="_blank">Yahweh, Yeshua and the Holy Spirit</a></li>
-    <li>My Furry Family Members</li>
-    <li>Sharing and Friendships (blood or by choice.)</li>
-    <li>Preaching</li>
-    <li>Writing</li>
-    <li>Art and Sculpture</li>
-    <li>Photography</li>
-    <li>Music</li>
-    <li>Creating</li>
-    <li>Sports</li>
-    <li>Chess</li>
-    <li>Movies</li>
-    <li>Apocalypse and Prophesy</li>
-    <li>Space and Science</li>
-
-  </ol>
-  </ul>
+  <div id="hobbies">
+    <ul>
+      <li><a href"https://product66.com/themindfullens/?p=988" target="_blank">Yahweh, Yeshua and the Holy Spirit</a></li>
+      <li>My Furry Family Members</li>
+      <li>Sharing and Friendships (blood or by choice.)</li>
+      <li>Preaching</li>
+      <li>Writing</li>
+      <li>Art and Sculpture</li>
+      <li>Photography</li>
+      <li>Music</li>
+      <li>Creating</li>
+      <li>Sports</li>
+      <li>Chess</li>
+      <li>Movies</li>
+      <li>Apocalypse and Prophesy</li>
+      <li>Space and Science</li>
+    </ul>
+  </div>
   <h3>Work Experience</h3>
-  <img src="images/thejourneytraveled.jpg" alt="The Traveled Roads"></img><br></br>
-  <hr noshade>
-  </hr>
-  <table>
-    <thead>
+  <div id="thejourney">
+  <img src="images/thejourneytraveled.jpg" alt="The Traveled Roads" id="thejourney"></div><br></br>
+  <hr>
+  <br></br>
+  <section>
+    <table class="workexperience">
       <tr>
-        <th>2007 Longs Drug Store-CVS:</th>
-        <th>Photo Lab Processor Technician Clerk</th>
+        <th>Company</th>
+        <th>Position</th>
+        <th>City and State</th>
+        <th>Dates</th>
       </tr>
-    </thead>
-    <tbody>
       <tr>
-        <td>Dates:</td>
-        <td>Responsibilities:</td>
-      <tr>
+        <td>Longs Drug Store-CVS:</td>
+        <td>Photo Lab-Technician Processing Clerk</td>
+        <td>Fremont, CA</td>
+        <td>2006-2007</td>
       </tr>
-    </tbody>
-  </table>
+      <tr>
+        <td>Something Special:</td>
+        <td>Custom Art Framer</td>
+        <td>Berkeley, CA</td>
+        <td>2005-2007</td>
+      </tr>
+      <tr>
+        <td>Siemens Building Technologies:</td>
+        <td>Lead Recreation Center Supervisor</td>
+        <td>Santa Clara, CA</td>
+        <td>2001-2002</td>
+      </tr>
+      <tr>
+        <td>UPS:</td>
+        <td>Loader and Unloader</td>
+        <td>Austin, TX</td>
+        <td>1999-2000</td>
+      </tr>
+    </table></section>
+    <br>
 
 
-  <tfooter>
-    I am currently receiving disability for my health condition of 36 years.
-  </tfooter>
+    <div id="demo"></div>
+    <footer id="disability">
+      I am currently receiving disability for my health condition of 36 years.<br><br>
+    <footer>
 
-  <p><a href="subjectsofinterest.html" target="_blank">Subjects of Personal Interest Branch Node:</p>
-  <p><a href="contactinfo.html" target="_blank">Contact Info Branch Node:</p>
+    <p><a href="subjectsofinterest.html" target="_blank">Subjects of Personal Interest Branch Node:</p>
+    <p><a href="contactinfo.html" target="_blank">Contact Info Branch Node:</p>
 
 </body>
 
