--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <table cellspacing="10">
     <tr>
-      <td> <img src="images/john.jpg" width="150" alt="Pre Isleton Shot" /></td>
+      <td> <img src="images/john.jpg" width="150" alt="Antioch Shot" /></td>
       <td>
         <h1 id="myname">John A. Dodge</h1>
 
@@ -95,7 +95,7 @@ The Complete 2020 Web Development Bootcamp:</a></p>-->
   <hr>
   </hr>
   <header>
-    <img src="images/thinkingmonkey.png" id="monkey" width="100" alt="Pre Isleton Shot" />
+    <img src="images/thinkingmonkey.png" id="monkey" width="100" alt="Philosophical Monkey White Beard" />
   </header>
   <h3>Study Subjects of Interest</h3>
   <div id="binaryinterest">
