--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <table cellspacing="10">
     <tr>
-      <td> <img src="images/john.jpg" width="150" alt="Antioch Shot" /></td>
+      <td> <img src="images/johncomposite.jpg" width="150" alt="Antioch Shot" /></td>
       <td>
         <h1 id="myname">John A. Dodge</h1>
 
