--- a/contactinfo.html
+++ b/contactinfo.html
@@ -1,35 +1,98 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en" >
 
 <head>
-  <meta charset="utf-8">
-  <title>Contact Information: My Contact Details</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
+</meta>
+<title>Contact Information: My Contact Details</title>
+<!--  <link rel="stylesheet" href="css/animatedform.css">  -->
+<link rel="stylesheet" href="css/formstyle.css">
+
+
 </head>
 
 <body>
-  <h2>John A. Dodge</h2>
-  <h1>The Majestic and Difficult Delta</h1>
-  <h3>The 10 Mile Stretch:The Loop</h3>
-  <p>jadmix@aol.com</p>
-  <hr>
-  <form action="mailto:jadmix@product66.com" method="post" enctype="text/plain">
-    <label>Your Name:</label>
-    <input type="text" name="yourName" value=""><br>
-    <!--<input type="color" name="" value="">-->
+<h2>John A. Dodge</h2>
+<h1>The Majestic and Difficult Delta</h1>
+<h3>The 10 Mile Stretch:The Loopy Loop</h3>
 
-    <label>Your Email:</label>
-    <input type="email" name="yourEmail" value=""><br><br>
-    <label>Your Message:</label><br>
-    <textarea name="yourMessage" rows="7" cols="40"></textarea><br>
-    <label>Feel free to select a time when you would like to receive updated information!</label>
-    <input type="date" name="" value=""><br><br>
-    <label>Feel free to send me a photographic work of art!</label><input type="file" name="" value=""><br><br>
 
-    <label>Do you wish to sign up to the email list?</label>
-    <label>Yes:</label><input type="checkbox" name="yes" value="yes"><br><br><br>
-    <input type="submit" name="">
-  </form>
-  <p><a href="index.html" target="_self">Root Hub: home page</p>
+
+<hr>
+
+<div class="form-container">
+<form action="mailto:jadmix@product66.com" method="post" enctype="text/plain">
+
+<label>Your Name:</label>
+<input type="text" name="yourName" value=""><br>
+<!--<input type="color" name="" value="">-->
+
+<label for="yourEmail">Your Email:</label>
+<input type="email" name="yourEmail" value=""><br><br>
+<label for="yourMessage">Your Message:</label><br>
+<textarea name="yourMessage" rows="7" cols="40"></textarea><br>
+<label for="info">Feel free to select a time when you would like to receive updated information!</label>
+<input type="date" name="info" value=""><br><br>
+<label for="fileUpload">Feel free to send me a photographic work of art!</label><input type="file" name="fileUpload" value="fileUpload"><br><br>
+
+<label for="signUp">Do you wish to sign up to the email list?</label>
+<label for="yes">Yes:</label><input type="checkbox" name="yes" value="yes"><br><br>
+<input type="submit" class="btn-Submit" name="submit">
+
+</form>
+
+
+<div class="jsInteractive">
+<div>
+<label for="bgColor">Interactive Background Color:</label>
+<input type="text" class="js-bg-color" id="bgColor">
+</div>
+<div>
+<label for="textColor">Interactive Text Color:</label>
+<input type="text" class="js-text-color" id="textColor">
+</div>
+<div>
+<label for="fontSize">Interactive Font Size:</label>
+<input type="number" class="js-font-size" id="fontSize">
+</div></div>
+
+
+<a href="mailto:jadimx@aol.com"><p id="myEmail">jadmix@aol.com</p></a>
+<p><a href="index.html" target="_self">Root Hub: home page</a></p>
+
+
+<!--Animated Form-->
+<!--   <div class="form">
+<div class="name-section"></div> 
+<input type="text" name="name" autocomplete="off" required/>
+<label for="name" class="label-name">
+<span class="content-name">Name:</span>
+</label>
+</div>
+<h1>Animated Form Input</h1> -->
+
+
+<!--End of Animated Form-->
+<!--   <script>
+var bgColor = document.querySelector(".js-bg-color")
+var textColor = document.querySelector(".js-text-color")
+var fontSize = document.querySelector(".js-font-size")
+var body = document.querySelector("body")
+
+bgColor.addEventListener('keyUp', function(event) {
+console.log(event.target.value)
+body.style.backgroundColor = event.target.value
+})
+textColor.addEventListener('keyUp', function(event) {
+body.style.color = event.target.value
+console.log(event.target.value)
+})
+bgColor.addEventListener('keyUp', function(event) {
+body.style.fontSize = event.target.value
+console.log(event.target.value)
+})
+</script> -->
 </body>
 
 </html>
